# CppTestAufgabe

./: CMakeLists.txt  CMakelists.txt  Dockerfile  README.md
data/__MACOSX/: ._2020-08-11--00-01-08-805.pgm  ._2020-08-11--00-01-09-073.pgm
src/: CMakeLists.txt  CMakelists.txt
src/cli/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt  CPgmAverager.cpp  CPgmAverager.hpp
test/: CMakeLists.txt  UT_CPgmAveragerTest.cpp
test/data/: a.pgm  a2.pgm  all0P1.pbm  b.pgm
testdata/: all0.pgm  inputA.pgm
